PYIC-4139 Test coverage and code smells