@@ -4,7 +4,6 @@ import uk.gov.di.ipv.core.library.annotations.ExcludeFromGeneratedCoverageReport
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class ListHelper {
@@ -46,7 +45,7 @@ public class ListHelper {
     public static <T> List<List<T>> getBatches(List<T> collection, int batchSize) {
         return IntStream.iterate(0, i -> i < collection.size(), i -> i + batchSize)
                 .mapToObj(i -> collection.subList(i, Math.min(i + batchSize, collection.size())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static <T> void swap(List<T> elements, int a, int b) {
